Added ability to only add 5 sandwiches to order, and adding images to assets folder

--- a/Planning_site_fruitbowl/Index.html
+++ b/Planning_site_fruitbowl/Index.html
@@ -42,8 +42,8 @@
 					<hr>
 
     <!-- Heading levels -->
-    <h1>Version One</h1>
-<p>Plan with data types and restrictions on data input</p>
+    <h1>Sprint 1</h1>
+<p>For this sprint,I planned to make a menu that would display all available options to the user. That was all I wanted the program to do at that stage.</p>
 <p>Picture of spreadsheet as single table, first version</p>
  <p>Reflection (+ anything about relevant implications)</p>
 <hr>
