Started adding to planning website

--- a/Planning_site_fruitbowl/Index.html
+++ b/Planning_site_fruitbowl/Index.html
@@ -39,6 +39,7 @@
 			
                     
 					<h1>Brief</h1>
+					<p>For this project, I wanted to design and create an online ordering system for a gourmet sandwich bar. I wanted it to be able to list sandwiches that could be ordered, have the ability to let the user pay for the order, add things to their order, remove things from their order, review their order and choose whether their order should be picked up or delivered to them, if it is for delivery, the program should be able to collect user information. I also wanted the program to only let the user order 5 sandwiches per order.</p>
 					<hr>
 
     <!-- Heading levels -->
