--- a/Planning_site_fruitbowl/Index.html
+++ b/Planning_site_fruitbowl/Index.html
@@ -71,14 +71,87 @@
 				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/early_receipt.png" alt="example of an earlier version of receipt">
 				<p>Of course, it is unreasonable to ask a user to pay a price with more than 2 decimal places. I used the .round() function to round the price to two decimal places because I soon realised how ridiculous these prices were.</p>
 				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/with_round.png" alt="Image of rounding occuring in price">
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/where_round_is_in_code.png" alt="area of code where the round function talked about is">
 				<p>Finally, here is an example of how I was laying my sprints out on my planning board</p>
 				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/sprints.png" alt="Layout of sprints">
 				<p>Reflection (+ anything about relevant implications)</p>
-				<p>These four sprints were relatively uneventful and very straight forward/basic, which is why I grouped them together. Quite obviously the program isn't finished and I plan to add many more features to it in the future. I was able to complete these four sprints in about the time of one lesson. In the next four sprints, I plan to make a loop that will allow the program to run more than once at a time (so that the user can observe menu and add things, add things in more than one go, etc...), I plan to allow the user to quit the program/abandon their order, give the user a way to look over their order, and create the ability to remove from the order.</p>
+				<p>These four sprints were relatively uneventful and very straight forward/basic, which is why I grouped them together. Quite obviously the program isn't finished and I plan to add many more features to it in the future. I was able to complete these four sprints in about the time of one lesson. In the next four sprints, I plan to make a loop that will allow the program to run more than once at a time (so that the user can observe menu and add things, add things in more than one go, etc...), I plan to allow the user to quit the program/abandon their order, give the user a way to look over their order, and create the ability to only order 5 sandwiches.</p>
 
 <hr>
 <h1>Sprints 5, 6, 7 and 8:</h1>
-<p>For these sprints, I plan to add the ability for the program to run more than once at a time (add a loop), add the ability to quit the program, add the ability to review an order, and add the ability to remove from the order.</p>
+<p>For these sprints, I plan to add the ability for the program to run more than once at a time (add a loop), add the ability to quit the program, add the ability to review an order, and add the ability to only order 5 sandwiches.</p>
+				<p>Here is proof that I got the abandon order function working:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/abandon_order.png" alt="abandoning order works">
+				<p>I got a few errors while attempting to restrict the user's amount of sandwiches they could order. Here is a picture showing this failure:</p>
+				<h3>Fail 3:</h3>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/5_sandwiches_fail.png" alt="Image showing you can order more than 5 sandwiches">
+				<p>Here is the code that was responsible for this issue:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/5_sandwiches_fail_code.png" alt="code responsible for fail">
+				<p>Here I show that I was able to make it so that only 5 sandwiches could be ordered at a time:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Only_5.png" alt="Only 5 sandwiches could be ordered at once.">
+				<p>Here is the code allowing this:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Only_5_code.png" alt="Code allowing only 5 to be ordered at once">
+				<p>After making it so that you could only order 5 sandwiches at a time, I wanted to send the user straight to the pay function. Here is an image of the user ordering 5 sandwiches in total, so the program sends them straight to the order page:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/sending_to_pay.png" alt="Sending user straight to pay when user_order = 5">
+				<p>Here is the code responsible for sending the user straight to the pay function when they've ordered 5 sandwiches:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/code_sending_to_pay.png" alt="Code that sends straight to pay">
+				<p>I'm not sure if I made this one into a sprint, but at some stage it occurred to me that someone might try to order a sandwich that wasn't on the list of sandwiches. I tried to combat this, but below is an image of an error when this happened. What happened was I tried to make it so that the user wouldn't be able to access a sandwich with an id number greater than the length of the list, but it seems I added a -1 to the end of the length function, which wasn't needed. It also seems that instead of printing what went wrong when the user needed to re-input their choice, I made it an input so the system asked twice which sandwich the user wanted before it took a response.</p>
+				<h3>Error 4:</h3>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Error_4.png" alt="Error number 4">
+				<p>Here I show how the code was to cause this error:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Error_4_code_before.png" alt="Code to cause error 4">
+				<p>Here error 4 is fixed:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Error_4_fixed.png" alt="Code that fixed error 4">
+				<p>Here is an example that shows that this error was fixed, and 12 was again accepted as a sandwich that could be ordered:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/12_accepted.png" alt="12 now accepted">
+				<p>Here it shows that it still doesn't accept 13:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/No_13.png" alt="13 not accepted">
+				<h3>Error 5:</h3>
+				<p>Here I forgot to add a condition to break from the loop, so it kept asking the user to input a selection of what sandwich they wanted. This loop was to validate the user's answer to make sure that they don't ask for a sandwich that's not on the list and don't provide an unreasonable answer. To fix this error, I just added an end term (aka if the requested sandwich is on the list, break out of loop).</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/no_condition_for_finish_loop.png" alt="Here is a display of a loop with no end term">
+				<p>This code shows the condition that ends the loop:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/ending_loop.png" alt="Condition to end loop">
+				<h3>Error 5:</h3>
+				<p>Here my program was thanking the user for ordering a sandwich, but it only thanked the user for ordering a specific sandwich when the paying process had occurred:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Late_Thanks.png" alt="Thanks being said late.">
+				<p>Here is the part of the code that was causing the error:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Why_Late_Thanks.png" alt="Part of code causing the late thanks">
+				<p>Because this print was put after the pay function was called upon, the pay function would run and then it would print the thanks message.</p>
+				<h3>Error 6:</h3>
+				<p>Here, I had a similar error that I had before. Here the program tries to grab the user's input twice, once more than it should. This will be because I accidentally made the error message an input again. Because the message that appeared was an input trying to grab a new value, it slowed the process down as the loop went right back to the start of the process anyway and asked the user twice. The message should have just been a print.</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Asking_values_twice.png" alt="asks user how many sandwiches they want twice">
+				<p>As I mentioned above, the error was fixed by replacing the input function letting the user know an error had happened, with a print function as shown below:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Fix_for_error_6.png" alt="Error 6 fix in code">
+				<p>Here is proof that error 6 was fixed:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Error_6_fixed.png" alt="Error 6 fixed.">
+				<p>Here I tried to create the function that allowed the user to review their order. It worked as shown below:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Review_work.png" alt="Review function working">
+				<p>Here it even works if I remove some of a specific sandwich, even though at this point I hadn't quite added the remove function. This was tested in the future. I ended up listing the sandwich's menu number in front of it to show the user which number this sandwich was on the menu:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Review_work_remove.png" alt="Review working after remove function occurred.">
+				<p>I realised that I had to make it so that the order would reset when a payment was made, so in the pay function once a customer has 'paid', the variable 'user_order' is set to 0, and the numbers at the end of all sandwich lists are set to 0 as well. Here's an example of why this had to occur:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/counters_not_reset.png" alt="Counters not reset.">
+				<p>Here is a fix for this issue, I reset the counters in the sandwich lists that were greater than 0 to 0:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Fix_counters_not_reset.png" alt=" Code for counters reset">
+				<p>Here is an image of the receipt being clear due to all counters being reset:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Counters_reset.png" alt="Counters reset">
+				<h3>Error 7</h3>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Error_7.png" alt="Able to pay for more than 5 sandwiches">
+				<p>I had an issue where I was able to order more than 5 sandwiches in total, and the program would allow the user to order 5 of one type of sandwich when other sandwiches were on the order. This is the error code that I had before I fixed this error:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Sandwich_control.png" alt="Error code that's trying to make sure only 5 of one sandwich can be ordered.">
+				<p>Below is the code that fixes this error:</p>
+				<p>I then had the issue that although my program would stop the user from ordering more than one type of sandwich at a time, it didn't account for previous orders of said sandwich. To combat this, I used this piece of code below:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Error_7_fix.png" alt="Making sure only 5 of one sandwich can be ordered.">
+				<p>Here is proof that error 7 was fixed:</p>
+				<p>I then had the issue that although my program would stop the user from ordering more than one type of sandwich at a time, it didn't account for previous orders of said sandwich. To combat this, I used this piece of code below:</p>
+				<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Error_7_fix_proof.png" alt="Making sure only 5 of one sandwich can be ordered.">
+				<p>Another error I accidentally came across and tried to fix/make top priority while working on this project was this error here, error 8</p>
+				<h3>Error 8:</h3>
+				<p>Here I realised that I had addressed the issue of the user asking for a sandwich not on the list with that number being bigger than the amount of sandwiches on the list, but I never thought about if the sandwich they were asking for was smaller than the amount of sandwiches on the list, so here I try to account for that.</p>
+
+
+
+
+
 <p>Link to data base</p>
 <p>Sample queries</p>
  <p>Reflection (+ anything about relevant implications)</p>
@@ -138,7 +211,6 @@ def review_fruit(l):
                 </div>
                 <hr>
                
-              
 
 					<!-- Lists -->
 					<h3>Unordered list</h3>
